kubernetes/apps/media/maintainerr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: maintainerr
  labels:
    media.sign-in: pocket-id
spec:
  hostnames: ["maintainerr.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: maintainerr
          port: 6246
